[project]
name = "geekshacking-mcp"
version = "0.1.0"
description = "This is a repo which implements mcp server using fastmcp"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.13.0.2",
]
[project.scripts]
todo-mcp = "todo_mcp:main"

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = [ "." ]

